--- a/pag.html
+++ b/pag.html
@@ -28,11 +28,11 @@
 
     <main class="container my-5">
 
-        <section id="inicio" class="my-5">
+        <section id="início da magia" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="IMG/flora.png" alt="Logotipo secundário da Tropicália" class="mb-3" width="563"
+                    <img src="IMG/flora.png" alt="Personagem de winx" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#tropicalia"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
@@ -45,18 +45,16 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop.</p>
+                    <h2>O que foi e winx?</h2>
+                    <p class="p-2">Winx é uma série animada infantil que foi lançada em 2004.
+          O sucesso foi tão grande que a série escrita apenas em 3 temporadas é 1 filme, se tornou uma série
+                    com 8 temporadas e 3 filmes, alguns spin offs também foram criadas e mais 1 reboot esta por vir.</p>
                 </div>
             </div>
         </section>
 
-        <section id="galeria">
-            <h2 class="text-center pt-5">Galeria</h2>
+        <section id="galeria da magia">
+            <h2 class="text-center pt-5"> Winx </h2>
             <div class="container p-3 mt-3 fundo-galeria ">
 
                 <div class="row justify-content-md-center">
