--- a/pag.html
+++ b/pag.html
@@ -45,7 +45,7 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
-                    <h2>O que foi e winx?</h2>
+                    <h2>O que foi winx?</h2>
                     <p class="p-2">Winx é uma série animada infantil que foi lançada em 2004.
           O sucesso foi tão grande que a série escrita apenas em 3 temporadas é 1 filme, se tornou uma série
                     com 8 temporadas e 3 filmes, alguns spin offs também foram criadas e mais 1 reboot esta por vir.</p>
@@ -63,7 +63,7 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
+                        <img src="IMG/" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
