--- a/pag.html
+++ b/pag.html
@@ -63,7 +63,7 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="IMG/" class="img-fluid rounded-5"
+                        <img src="IMG/images (1).jpeg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
