--- a/pag.html
+++ b/pag.html
@@ -31,18 +31,18 @@
         <section id="início da magia" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
+                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a magia</h1>
                     <img src="IMG/flora.png" alt="Personagem de winx" class="mb-3" width="563"
                         height="278" loading="lazy">
-                    <a href="#tropicalia"
+                    <a href="#clube das winx"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
-                        conhecer!</a>
+                        conhecer a magica!</a>
                 </div>
 
             </div>
         </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
+        <section id="Alfea" class="my-5 pt-6 secao-Enchantix">
             <div class="container d-flex align-items-center ">
                   <div class="col-5">
                     <h2>O que foi winx?</h2>
@@ -70,15 +70,15 @@
             </div>
         </section>
 
-        <section id="contato">
+        <section id="contato da magica">
             <div class="container p-5 d-flex justify-content-center">
                 <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
-                    <h2 class="mb-3">Entre em contato</h2>
+                    <h2 class="mb-3">Entre em contato das magias</h2>
                     <form>
                         <div class="form-group mb-3">
-                            <label for="nome">Nome</label>
-                            <input type="text" id="nome" name="nome" class="form-control rounded-3 mt-1"
-                                placeholder="Digite seu nome completo">
+                            <label for="nome">Nome da fada</label>
+                            <input type="text" id="nome" name="nome encantado" class="form-control rounded-3 mt-1"
+                                placeholder="Digite seu personagem favorito de winx💖">
                         </div>
                         <div class="form-group mb-3">
                             <label for="email">Email</label>
@@ -86,7 +86,7 @@
                                 placeholder="Digite seu email">
                         </div>
                         <div class="form-group mb-3">
-                            <label for="mensagem">Mensagem</label>
+                            <label for="mensagem">Curiosidade magica(me envie algo sobre winx)</label>
                             <textarea id="mensagem" name="mensagem" class="form-control rounded-4 mt-2" rows="4"
                                 placeholder="Escreva sua mensagem"></textarea>
                         </div>
@@ -104,7 +104,7 @@
         <i class="bi bi-whatsapp"></i>
         <i class="bi bi-instagram"></i>
         <i class="bi bi-tiktok"></i>
-        <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
+        <p class="mt-3">Desenvolvido por mim(kauá)💝.</p>
     </footer>
     <script src="script.js"></script>
 
